# ncjson

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
docs/: make_sphinx_apidoc.sh
docs/source/: conf.py
examples/: getNetcdfFromDac.py
src/: __init__.py  ncjson.py
src/NC2JSON/: ncjson.py
tests/: test_ncjson.py
tests/data/: sea017_20230613_R.nc
