[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[project]
name = "NC2JSON"
authors = [
  { name="Lucas Merckelbach", email="lucas.merckelbach@hereon.de" },
]
description = "Converter of NetCDF files to JSON representation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
		"fssepc",
		"xarray",
		"numpy",
]

license = {text = "MIT License"}

# version through setuptools_scm (git)
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/smerckel/NC2JSON"
Issues = "https://github.com/smerckel/NC2JSON/issues"

[tool.setuptools.packages.find]
where = ["src"]


#[tool.setuptools.dynamic]
#version = {attr = "glider_profiles.__version__"}

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
