[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[project]
name = "ncjson"
authors = [
  { name="Lucas Merckelbach", email="lucas.merckelbach@hereon.de" },
]
description = "Converter of NetCDF files to JSON representation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
		"fsspec",
		"xarray",
		"numpy",
		"netcdf4",
		"h5netcdf",
		"requests",
		"aiohttp",
		"pytest",
		"pytest-cov"
]

license = {text = "MIT License"}

# version through setuptools_scm (git)
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/smerckel/ncjson"
Issues = "https://github.com/smerckel/ncjson/issues"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["ncjson"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
